force-app/main/default/objects/BirstSetting__c/BirstSetting__c.object-meta.xml
<CustomObject>
    <description>Setting for Birst Reports</description>
    <label>BirstSetting</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BirstSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>