force-app/main/default/objects/BirstSetting__c/fields/CollectionName__c.field-meta.xml
<CustomField>
    <fullName>CollectionName__c</fullName>
    <label>Collection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>