force-app/main/default/objects/BirstSetting__c/fields/DashBoardName__c.field-meta.xml
<CustomField>
    <fullName>DashBoardName__c</fullName>
    <label>DashBoardName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>