force-app/main/default/objects/BirstSetting__c/fields/PermissionSetName__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetName__c</fullName>
    <label>PermissionSetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>