force-app/main/default/objects/BirstSetting__c/fields/SpaceID__c.field-meta.xml
<CustomField>
    <fullName>SpaceID__c</fullName>
    <label>SpaceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>